--- a/r-inla.org/doc/hyper/likelihood/zeroinflatednbinomial1strata2.tex
+++ b/r-inla.org/doc/hyper/likelihood/zeroinflatednbinomial1strata2.tex
@@ -35,6 +35,7 @@
 	 	 	\item[from.theta] \verb|function(x) exp(x)/(1+exp(x))|
 	 	 \end{description}
 	 \end{description}
+	\item[status] experimental
 	\item[survival] FALSE
 	\item[discrete] FALSE
 	\item[link] default log
