Fix in the doc for stochvol.

--- a/r-inla.org/doc/likelihood/stochvolgaussian.tex
+++ b/r-inla.org/doc/likelihood/stochvolgaussian.tex
@@ -39,7 +39,7 @@ None
 \end{itemize}
 
 \subsubsection*{Hyperparameter spesification and default values}
-\input{../hyper/likelihood/gev.tex}
+\input{../hyper/likelihood/stochvol.tex}
 
 \subsection*{Example}
 In the following example we specify the likelihood for the stochastic
