Changed a unclear comment in the doc for the stochvol-s likelihoods

--- a/r-inla.org/doc/likelihood/stochvolnig.tex
+++ b/r-inla.org/doc/likelihood/stochvolnig.tex
@@ -33,10 +33,10 @@ where $\gamma^{2} = 1 + \beta^{2}/\psi^{2}$.
 
 \subsection*{Link-function}
 
-The scale parameter $\sigma $ is linked to the linear predictor $\eta
+The squared scale parameter $\sigma$ is linked to the linear predictor $\eta
 $ as:
 \[
-\sigma =\exp(\eta /2)
+\sigma^{2} =\exp(\eta)
 \]
 
 
