--- a/r-inla.org/doc/likelihood/stochvolt.tex
+++ b/r-inla.org/doc/likelihood/stochvolt.tex
@@ -20,9 +20,9 @@ and $T_{\nu}$ is a Student-$t$ distribution with $\nu$ degrees of freedom {\it s
 
 \subsection*{Link-function}
 
-The scale parameter $\sigma $ is linked to the linear predictor $\eta $ as:
+The squared scale parameter $\sigma$ is linked to the linear predictor $\eta $ as:
 \[
-\sigma =\exp(\eta /2)
+\sigma^{2} =\exp(\eta)
 \]
 
 \subsection*{Hyperparameters}
