--- a/r-inla.org/doc/likelihood/stochvolgaussian.tex
+++ b/r-inla.org/doc/likelihood/stochvolgaussian.tex
@@ -20,12 +20,11 @@ where
 
 \subsection*{Link-function}
 
-The scale parameter $\sigma $ is linked to the linear predictor $\eta
-$ as:
+The squared scale parameter $\sigma$ is linked to the linear predictor
+$\eta$ as:
 \[
-\sigma =\exp(\eta /2)
+\sigma^{2} =\exp(\eta)
 \]
-
 
 \subsection*{Hyperparameters}
 
