--- a/utils/R/install.me
+++ b/utils/R/install.me
@@ -42,7 +42,7 @@ rsync -auvL --delete --exclude '/*~' --exclude RCS/ --exclude TAGS $D/.. INLA/.
     echo "# lines as:"
     echo "# ## Export: func1"
     echo "# ## Export: func1 func2"
-    echo "# etc...
+    echo "# etc..."
     echo ""
 
     find INLA/R -name \*.R | while read f; do
