--- a/utils/R/install.me
+++ b/utils/R/install.me
@@ -50,7 +50,7 @@ rsync -auvL --delete --exclude '/*~' --exclude RCS/ --exclude TAGS $D/.. INLA/.
 	    echo "$ff" | awk -F: '{print $2}' | awk '{for(i=1;i<=NF;i++) print "export(" $i ")"}'
 	done
     done
-} >> INLA/NAMESPACE
+} | tee --append INLA/NAMESPACE
 
 ~hrue/bin/fix-permissions INLA
 
