--- a/r-inla.org/doc/hyper/latent/z.tex
+++ b/r-inla.org/doc/hyper/latent/z.tex
@@ -23,5 +23,5 @@
 	\item[n.div.by] 
 	\item[n.required] FALSE
 	\item[set.default.values] FALSE
-	\item[pdf] NA
+	\item[pdf] z.pdf
 \end{description}
