--- a/r-inla.org/doc/hyper/latent/z.tex
+++ b/r-inla.org/doc/hyper/latent/z.tex
@@ -23,6 +23,6 @@
 	\item[n.div.by] 
 	\item[n.required] TRUE
 	\item[set.default.values] TRUE
-	\item[pdf] z.pdf
+	\item[pdf] z
 	\item[status] experimental
 \end{description}
