Added another example to the doc for the z-model.

--- a/r-inla.org/doc/latent/z.tex
+++ b/r-inla.org/doc/latent/z.tex
@@ -65,9 +65,13 @@ $k\times (n+m)$ matrix where $k$ is the number of linear constraints.
 \input{../hyper/latent/z.tex}
 
 
-\subsection*{Example}
+\subsection*{Example 1}
 
 {\small\verbatiminput{example-z.R}}
+
+\subsection*{Example 2}
+
+{\small\verbatiminput{example2-z.R}}
 
 \subsection*{Notes}
 
