Added another example for the z-model; thanks to CtB.

--- a/r-inla.org/doc/latent/z.tex
+++ b/r-inla.org/doc/latent/z.tex
@@ -67,9 +67,13 @@ $k\times (n+m)$ matrix where $k$ is the number of linear constraints.
 
 \subsection*{Example 1}
 
-{\small\verbatiminput{example-z.R}}
+{\small\verbatiminput{example3-z.R}}
 
 \subsection*{Example 2}
+
+{\small\verbatiminput{example-z.R}}
+
+\subsection*{Example 3}
 
 {\small\verbatiminput{example2-z.R}}
 
