Remove comments in the auto-generated givemeINLA-scripts

--- a/utils/R/install.me
+++ b/utils/R/install.me
@@ -122,16 +122,18 @@ if [ $# -ge 1 -a "$1" == "2" ]; then
 fi
 
 {
-    cat $D/upgrade.R | sed 's/inla.upgrade/inla.installer/g' 
-    cat $D/os.R
+    cat $D/upgrade.R | sed 's/inla.upgrade/inla.installer/g' | grep -v ^#
+    cat $D/os.R | grep -v ^#
+    echo ' '
     echo '`givemeINLA` = function(...) inla.installer(...)'
     echo 'if (!exists("inla.lib")) inla.lib = NULL'
     echo 'givemeINLA(testing=FALSE, lib = inla.lib)'
     echo 'cat("\n\n\nYou can later upgrade INLA using: inla.upgrade()\n")'
 } | sed 's/inla.os/inla.installer.os/g' >  $www/../givemeINLA.R
 {
-    cat $D/upgrade.R | sed 's/inla.upgrade/inla.installer/g' 
-    cat $D/os.R
+    cat $D/upgrade.R | sed 's/inla.upgrade/inla.installer/g' | grep -v ^#
+    cat $D/os.R | grep -v ^#
+    echo ' '
     echo '`givemeINLA` = function(...) inla.installer(...)'
     echo 'if (!exists("inla.lib")) inla.lib = NULL'
     echo 'givemeINLA(testing=TRUE, lib = inla.lib)'
