--- a/r-inla.org/doc/latent/rw1.tex
+++ b/r-inla.org/doc/latent/rw1.tex
@@ -40,12 +40,18 @@ and the prior is defined on $\mathbf{\theta}$.
 The RW1 model is specified inside the {\tt f()} function as
 \begin{verbatim}
  f(<whatever>, model="rw1", values=<values>, cyclic=<TRUE|FALSE>,
-              hyper = <hyper>)
+              hyper = <hyper>, scale.model = FALSE)
 \end{verbatim}
 The (optional) argument {\tt values } is a numeric or factor vector
 giving the values assumed by the covariate for which we want the
 effect to be estimated. See next example for an application.
  
+The logical option \verb|scale.model| determine if the model should be
+scaled to have an average variance (the diagonal of the generalized
+inverse) equal to 1. This makes prior spesification much
+easier. Default is \verb|FALSE| so that the model is not scaled.
+
+
 \subsubsection*{Hyperparameter spesification and default values}
 \input{../hyper/latent/rw1.tex}
 
