--- a/utils/R/install.me
+++ b/utils/R/install.me
@@ -49,17 +49,14 @@ rsync -auvL --delete --exclude '/*~' --exclude RCS/ --exclude TAGS $D/.. INLA/.
     done
 } >> INLA/NAMESPACE || exit 1
 
-cat $D/inla.version.R | \
+cat $D/version.R | \
     awk '/^[ \t]*rinla[.]hgid *=/{ print "    rinla.hgid = ", "inla.trim(\"" hg      "\")"; next;}
          /^[ \t]*inla[.]hgid *=/{  print "    inla.hgid  = ", "inla.trim(\"" inlahg "\")"; next;}
          /^[ \t]*date *=/{       print "    date       = ", "inla.trim(\"" date    "\")"; next;}
          /^[ \t]*bdate *=/{      print "    bdate      = ", "inla.trim(\"" bdate   "\")"; next;}
          /^[ \t]*version *=/{      print "    version      = ", "inla.trim(\"" version   "\")"; next;}
 	 {print}' hg="$hg" inlahg="$inlahg" bdate="$bdate" date="$date" version="$VERSION" > $tt
-mv -f $tt $D/inla.version.R
-
-##echo $D/inla.version.R
-##cat $D/inla.version.R
+mv -f $tt $D/version.R
 
 ( cd $D; ./make-man-pages; )
 
