Some more required changes.

--- a/r-inla.org/doc/hyper/likelihood/nbinomial.tex
+++ b/r-inla.org/doc/hyper/likelihood/nbinomial.tex
@@ -17,6 +17,6 @@
 	 \end{description}
 	\item[survival] FALSE
 	\item[discrete] TRUE
-	\item[link] default log
+	\item[link] default log logoffset
 	\item[pdf] nbinomial
 \end{description}
