--- a/r-inla.org/doc/hyper/link/test1.tex
+++ b/r-inla.org/doc/hyper/link/test1.tex
@@ -3,7 +3,7 @@
 \begin{description}
 	\item[hyper]\ 
 	 \begin{description}
-	 	\item[beta]\ 
+	 	\item[theta]\ 
 	 	 \begin{description}
 	 	 	\item[name] beta
 	 	 	\item[short.name] b
