--- a/r-inla.org/doc/hyper/likelihood/gpoisson.tex
+++ b/r-inla.org/doc/hyper/likelihood/gpoisson.tex
@@ -28,7 +28,7 @@
 	 \end{description}
 	\item[survival] FALSE
 	\item[discrete] TRUE
-	\item[link] default log
+	\item[link] default log logoffset
 	\item[pdf] gpoisson
 	\item[status] experimental
 \end{description}
