--- a/utils/R/install.me
+++ b/utils/R/install.me
@@ -82,7 +82,7 @@ cp $mf $md/$mf
 SRC=INLA-source.tgz
 tar cvfzh INLA-source.tgz INLA
 
-R --vanilla CMD build INLA || exit 1
+R --vanilla CMD build --resave-data INLA || exit 1
 
 INLA=$(echo INLA_*.tar.gz)
 tgzINLA=${INLA%%.tar.gz}.tgz
