--- a/r-inla.org/doc/hyper/likelihood/laplace.tex
+++ b/r-inla.org/doc/hyper/likelihood/laplace.tex
@@ -18,5 +18,6 @@
 	\item[survival] FALSE
 	\item[discrete] FALSE
 	\item[link] default identity
+	\item[status] disabled
 	\item[pdf] laplace
 \end{description}
